--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,8 @@ APP_URL=http://olive.veri.zone
 LOG_CHANNEL=stack
 
 DB_CONNECTION=pgsql
-DB_DATABASE=olive
+DB_DATABASE=postgres
+DB_SCHEMA=olive
 DB_USERNAME=postgres
 DB_PASSWORD=1234
 
@@ -21,12 +22,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.yandex.com.tr
+MAIL_PORT=465
+MAIL_USERNAME=noreply@veri.zone
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=noreply@veri.zone
+MAIL_FROM_NAME=veri.zone
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
@@ -35,3 +37,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GOOGLE_RECAPTCHA_SITE_KEY=
+GOOGLE_RECAPTCHA_SECRET_KEY=
+
+GOOGLE_ANALYTICS_CODE=""
