--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,9 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "jenssegers/agent": "^2.6",
-        "konekt/pdf-invoice": "^1.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "predis/predis": "^1.1",
-        "vsmoraes/laravel-pdf": "^2.0"
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
