--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "jenssegers/agent": "^2.6",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "torann/geoip": "^1.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
