--- a/supervisor/olive-worker.conf
+++ b/supervisor/olive-worker.conf
@@ -1,12 +1,12 @@
-[program:olive-worker]
+[program:olive-trigger]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/olive.veri.zone/artisan queue:work --queue=worker --sleep=5 --tries=5
+command=php /var/www/olive.veri.zone/artisan queue:work --queue=trigger --sleep=5 --tries=5
 autostart=true
 autorestart=true
 user=root
 numprocs=1
 redirect_stderr=true
-stdout_logfile=/var/www/olive.veri.zone/supervisor/logs/worker.log
+stdout_logfile=/var/www/olive.veri.zone/supervisor/logs/trigger.log
 
 [program:olive-elasticsearch]
 process_name=%(program_name)s_%(process_num)02d
@@ -28,12 +28,12 @@ numprocs=2
 redirect_stderr=true
 stdout_logfile=/var/www/olive.veri.zone/supervisor/logs/email.log
 
-[program:olive-trigger]
+[program:olive-crawler]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/olive.veri.zone/artisan queue:work --queue=trigger --sleep=5 --tries=5
+command=php /var/www/olive.veri.zone/artisan queue:work --queue=crawler --sleep=5 --tries=5
 autostart=true
 autorestart=true
 user=root
-numprocs=1
+numprocs=20
 redirect_stderr=true
-stdout_logfile=/var/www/olive.veri.zone/supervisor/logs/trigger.log
+stdout_logfile=/var/www/olive.veri.zone/supervisor/logs/crawler.log
