--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "jenssegers/agent": "^2.6",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
+        "orangehill/iseed": "^2.5",
         "predis/predis": "^1.1",
         "torann/geoip": "^1.0"
     },
