fixes #33 Laravel Horizon

--- a/supervisor/olive-worker.conf
+++ b/supervisor/olive-worker.conf
@@ -37,3 +37,12 @@ user=root
 numprocs=10
 redirect_stderr=true
 stdout_logfile=/var/www/olive.veri.zone/supervisor/logs/crawler.log
+
+[program:olive-horizon]
+process_name=%(program_name)s_%(process_num)02d
+command=php /var/www/olive.veri.zone/artisan horizon
+autostart=true
+autorestart=true
+user=root
+redirect_stderr=true
+stdout_logfile=/var/www/olive.veri.zone/supervisor/logs/horizon.log
