--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "intervention/image": "^2.4",
         "jenssegers/agent": "^2.6",
         "laravel/framework": "5.6.*",
+        "laravel/horizon": "^1.4",
         "laravel/tinker": "^1.0",
         "orangehill/iseed": "^2.5",
         "predis/predis": "^1.1",
