Twitter ile bağlan tamamlandı.

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ APP_DEBUG=true
 APP_URL=http://olive.veri.zone
 APP_PASSWORD=1234
 
+FIRST_MIGRATION=false
+
 LOG_CHANNEL=stack
 
 DB_CONNECTION=pgsql
@@ -53,3 +55,8 @@ MAXMIND_USER_ID=
 MAXMIND_LICENSE_KEY=
 
 ELASTICSEARCH_IPS="127.0.0.1:9200"
+
+YOUTUBE_API_KEY=
+
+TWITTER_CONSUMER_KEY=
+TWITTER_CONSUMER_SECRET=
