--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "jenssegers/agent": "^2.6",
         "laravel/framework": "5.7.*",
         "laravel/horizon": "^1.4",
+        "laravel/socialite": "^3.1",
         "laravel/tinker": "^1.0",
         "orangehill/iseed": "^2.5",
         "predis/predis": "^1.1",
