#24 Trend başlıkları belirleme ve depolama.

--- a/.env.example
+++ b/.env.example
@@ -60,3 +60,7 @@ YOUTUBE_API_KEY=
 
 TWITTER_CONSUMER_KEY=
 TWITTER_CONSUMER_SECRET=
+TWITTER_ACCESS_TOKEN=
+TWITTER_ACCESS_TOKEN_SECRET=
+
+TWITTER_TREND_ID=23424969
