--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/oauth-subscriber": "^0.3.0",
         "intervention/image": "^2.4",
         "jenssegers/agent": "^2.6",
+        "jwhennessey/phpinsight": "^2.0",
         "laravel/framework": "5.7.*",
         "laravel/horizon": "^1.4",
         "laravel/socialite": "^3.1",
