--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,14 @@
         "guzzlehttp/oauth-subscriber": "^0.3.0",
         "intervention/image": "^2.4",
         "jenssegers/agent": "^2.6",
-        "jwhennessey/phpinsight": "^2.0",
         "laravel/framework": "5.7.*",
         "laravel/horizon": "^1.4",
         "laravel/socialite": "^3.1",
         "laravel/tinker": "^1.0",
         "orangehill/iseed": "^2.5",
         "predis/predis": "^1.1",
-        "torann/geoip": "^1.0"
+        "torann/geoip": "^1.0",
+        "wutlu/phpsentiment": "^1.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
