--- a/supervisor/olive-worker.conf
+++ b/supervisor/olive-worker.conf
@@ -38,6 +38,16 @@ numprocs=10
 redirect_stderr=true
 stdout_logfile=/var/www/olive.veri.zone/supervisor/logs/crawler.log
 
+[program:olive-process]
+process_name=%(program_name)s_%(process_num)02d
+command=php /var/www/olive.veri.zone/artisan queue:work --queue=process --sleep=10 --tries=2
+autostart=true
+autorestart=true
+user=root
+numprocs=10
+redirect_stderr=true
+stdout_logfile=/var/www/olive.veri.zone/supervisor/logs/process.log
+
 [program:olive-horizon]
 process_name=%(program_name)s_%(process_num)02d
 command=php /var/www/olive.veri.zone/artisan horizon
