--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.1.3",
         "alaouy/youtube": "^2.2",
+        "barryvdh/laravel-dompdf": "^0.8.3",
         "elasticsearch/elasticsearch": "^6.0",
         "fideloper/proxy": "^4.0",
         "geoip2/geoip2": "^2.9",
