--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://olive.veri.zone
+APP_DOMAIN=veri.zone
 APP_PASSWORD=1234
 
 FIRST_MIGRATION=false
