forum ve fixes #63

--- a/supervisor/olive-worker.conf
+++ b/supervisor/olive-worker.conf
@@ -1,58 +1,58 @@
 [program:olive-trigger]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/olive.veri.zone/artisan queue:work --queue=trigger --sleep=5 --tries=2
+command=php /var/www/veri.zone/artisan queue:work --queue=trigger --sleep=5 --tries=2
 autostart=true
 autorestart=true
 user=root
 numprocs=1
 redirect_stderr=true
-stdout_logfile=/var/www/olive.veri.zone/supervisor/logs/trigger.log
+stdout_logfile=/var/www/veri.zone/supervisor/logs/trigger.log
 
 [program:olive-elasticsearch]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/olive.veri.zone/artisan queue:work --queue=elasticsearch --sleep=5 --tries=4
+command=php /var/www/veri.zone/artisan queue:work --queue=elasticsearch --sleep=5 --tries=4
 autostart=true
 autorestart=true
 user=root
 numprocs=5
 redirect_stderr=true
-stdout_logfile=/var/www/olive.veri.zone/supervisor/logs/elasticsearch.log
+stdout_logfile=/var/www/veri.zone/supervisor/logs/elasticsearch.log
 
 [program:olive-email]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/olive.veri.zone/artisan queue:work --queue=email --sleep=5 --tries=2
+command=php /var/www/veri.zone/artisan queue:work --queue=email --sleep=5 --tries=2
 autostart=true
 autorestart=true
 user=root
 numprocs=2
 redirect_stderr=true
-stdout_logfile=/var/www/olive.veri.zone/supervisor/logs/email.log
+stdout_logfile=/var/www/veri.zone/supervisor/logs/email.log
 
 [program:olive-crawler]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/olive.veri.zone/artisan queue:work --queue=crawler --sleep=5 --tries=2
+command=php /var/www/veri.zone/artisan queue:work --queue=crawler --sleep=5 --tries=2
 autostart=true
 autorestart=true
 user=root
 numprocs=10
 redirect_stderr=true
-stdout_logfile=/var/www/olive.veri.zone/supervisor/logs/crawler.log
+stdout_logfile=/var/www/veri.zone/supervisor/logs/crawler.log
 
 [program:olive-process]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/olive.veri.zone/artisan queue:work --queue=process --sleep=10 --tries=2
+command=php /var/www/veri.zone/artisan queue:work --queue=process --sleep=10 --tries=2
 autostart=true
 autorestart=true
 user=root
 numprocs=10
 redirect_stderr=true
-stdout_logfile=/var/www/olive.veri.zone/supervisor/logs/process.log
+stdout_logfile=/var/www/veri.zone/supervisor/logs/process.log
 
 [program:olive-horizon]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/olive.veri.zone/artisan horizon
+command=php /var/www/veri.zone/artisan horizon
 autostart=true
 autorestart=true
 user=root
 redirect_stderr=true
-stdout_logfile=/var/www/olive.veri.zone/supervisor/logs/horizon.log
+stdout_logfile=/var/www/veri.zone/supervisor/logs/horizon.log
