--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ LOG_CHANNEL=stack
 
 DB_CONNECTION=pgsql
 DB_DATABASE=postgres
-DB_SCHEMA=olive
+DB_SCHEMA=public
 DB_USERNAME=postgres
 DB_PASSWORD=1234
 
