--- a/.env.example
+++ b/.env.example
@@ -11,14 +11,14 @@ FIRST_MIGRATION=false
 LOG_CHANNEL=stack
 
 DB_CONNECTION=pgsql
-DB_DATABASE=postgres
+DB_DATABASE=olive
 DB_SCHEMA=public
 DB_USERNAME=postgres
 DB_PASSWORD=1234
 
 BROADCAST_DRIVER=redis
 CACHE_DRIVER=redis
-SESSION_DRIVER=redis
+SESSION_DRIVER=app.database
 SESSION_LIFETIME=120
 QUEUE_DRIVER=redis
 
@@ -49,7 +49,7 @@ GOOGLE_RECAPTCHA_SECRET_KEY=
 
 GOOGLE_ANALYTICS_CODE=""
 
-TAX=50
+TAX=18
 DISCOUNT_WITH_YEAR=12
 
 MAXMIND_USER_ID=
