--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/socialite": "^3.1",
         "laravel/tinker": "^1.0",
         "orangehill/iseed": "^2.5",
+        "patrickschur/language-detection": "^3.4",
         "predis/predis": "^1.1",
         "qhudabaksh/phpsentiment": "^1.0",
         "torann/geoip": "^1.0"
