--- a/supervisor/olive-worker.conf
+++ b/supervisor/olive-worker.conf
@@ -34,9 +34,19 @@ command=php /var/www/veri.zone/artisan queue:work --queue=crawler --sleep=5 --tr
 autostart=true
 autorestart=true
 user=root
-numprocs=10
+numprocs=5
 redirect_stderr=true
 stdout_logfile=/var/www/veri.zone/supervisor/logs/crawler.log
+
+[program:olive-power-crawler]
+process_name=%(program_name)s_%(process_num)02d
+command=php /var/www/veri.zone/artisan queue:work --queue=power-crawler --sleep=5 --tries=1
+autostart=true
+autorestart=true
+user=root
+numprocs=10
+redirect_stderr=true
+stdout_logfile=/var/www/veri.zone/supervisor/logs/power-crawler.log
 
 [program:olive-process]
 process_name=%(program_name)s_%(process_num)02d
