--- a/supervisor/olive-worker.conf
+++ b/supervisor/olive-worker.conf
@@ -48,6 +48,16 @@ numprocs=10
 redirect_stderr=true
 stdout_logfile=/var/www/veri.zone/supervisor/logs/power-crawler.log
 
+[program:olive-error-crawler]
+process_name=%(program_name)s_%(process_num)02d
+command=php /var/www/veri.zone/artisan queue:work --queue=error-crawler --sleep=5 --tries=2
+autostart=true
+autorestart=true
+user=root
+numprocs=2
+redirect_stderr=true
+stdout_logfile=/var/www/veri.zone/supervisor/logs/error-crawler.log
+
 [program:olive-process]
 process_name=%(program_name)s_%(process_num)02d
 command=php /var/www/veri.zone/artisan queue:work --queue=process --sleep=10 --tries=2
