--- a/.env.example
+++ b/.env.example
@@ -11,10 +11,10 @@ FIRST_MIGRATION=false
 LOG_CHANNEL=stack
 
 DB_CONNECTION=pgsql
-DB_DATABASE=olive
+DB_DATABASE=postgres
 DB_SCHEMA=public
 DB_USERNAME=postgres
-DB_PASSWORD=1234
+DB_PASSWORD=postgres
 
 BROADCAST_DRIVER=redis
 CACHE_DRIVER=redis
