--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,9 @@ APP_URL=http://olive.veri.zone
 APP_DOMAIN=veri.zone
 APP_PASSWORD=1234
 
+REFERENTIAL_REGISTRATION=required
 FIRST_MIGRATION=false
-SSL=no
+SSL=false
 
 LOG_CHANNEL=stack
 
