Server Online Status

--- a/supervisor/olive-worker.conf
+++ b/supervisor/olive-worker.conf
@@ -76,3 +76,12 @@ autorestart=true
 user=root
 redirect_stderr=true
 stdout_logfile=/var/www/veri.zone/supervisor/logs/horizon.log
+
+[program:olive-server-user_control]
+process_name=%(program_name)s_%(process_num)02d
+command=php /var/www/veri.zone/artisan server:user_control
+autostart=true
+autorestart=true
+user=root
+redirect_stderr=true
+stdout_logfile=/var/www/veri.zone/supervisor/logs/user_control.log
