--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,7 @@ DB_DATABASE=postgres
 DB_SCHEMA=public
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
+DB_ALIAS=oliveone
 
 BROADCAST_DRIVER=redis
 CACHE_DRIVER=redis
@@ -53,6 +54,7 @@ GOOGLE_ANALYTICS_CODE=""
 
 TAX=18
 DISCOUNT_WITH_YEAR=12
+REFERENCE_RATE=10
 
 MAXMIND_USER_ID=
 MAXMIND_LICENSE_KEY=
