--- a/.env.example
+++ b/.env.example
@@ -59,7 +59,8 @@ REFERENCE_RATE=10
 MAXMIND_USER_ID=
 MAXMIND_LICENSE_KEY=
 
-ELASTICSEARCH_IPS="127.0.0.1:9200"
+ELASTICSEARCH_NODE_IPS="127.0.0.1:9200"
+ELASTICSEARCH_NODE_NAMES="node-1"
 
 YOUTUBE_API_KEY=
 
