--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,7 @@ MAIL_FROM_ADDRESS=noreply@veri.zone
 MAIL_FROM_NAME=veri.zone
 
 GROUP_EMAIL=destek@veri.zone
+ORGANISATION_ID_ROOT=15
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
