--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ APP_DEBUG=true
 APP_URL=http://olive.veri.zone
 APP_DOMAIN=veri.zone
 APP_PASSWORD=1234
+APP_REGISTRATION=false
 
 REFERENTIAL_REGISTRATION=required
 FIRST_MIGRATION=false
