--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,7 @@ MAIL_FROM_NAME=veri.zone
 
 GROUP_EMAIL=destek@veri.zone
 ORGANISATION_ID_ROOT=15
+USER_ID_SUPPORT=1
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
