--- a/.env.example
+++ b/.env.example
@@ -74,3 +74,7 @@ TWITTER_ACCESS_TOKEN_SECRET=
 TWITTER_TREND_ID=23424969
 
 ALEXA_RANK_MIN=20000
+
+PAYTR_MERCHANT_ID=
+PAYTR_MERCHANT_KEY=
+PAYTR_MERCHANT_SALT=
