--- a/.env.example
+++ b/.env.example
@@ -56,7 +56,7 @@ GOOGLE_RECAPTCHA_SECRET_KEY=
 GOOGLE_ANALYTICS_CODE=""
 
 TAX=18
-DISCOUNT_WITH_YEAR=12
+STOPPAGE=20
 
 MAXMIND_USER_ID=
 MAXMIND_LICENSE_KEY=
