--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,7 @@ MAIL_FROM_ADDRESS=noreply@veri.zone
 MAIL_FROM_NAME=veri.zone
 
 GROUP_EMAIL=destek@veri.zone
+ROOT_EMAIL=alper@veri.zone
 ORGANISATION_ID_ROOT=15
 USER_ID_SUPPORT=1
 
