--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
     "name": "laravel/laravel",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "type": "project",
     "require": {
@@ -16,7 +19,7 @@
         "guzzlehttp/oauth-subscriber": "^0.3.0",
         "intervention/image": "^2.4",
         "jenssegers/agent": "^2.6",
-        "laravel/framework": "5.7.*",
+        "laravel/framework": "^5.8.0",
         "laravel/socialite": "^3.1",
         "laravel/tinker": "^1.0",
         "orangehill/iseed": "^2.5",
@@ -47,8 +50,7 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": [
-            ]
+            "dont-discover": []
         }
     },
     "scripts": {
