--- a/.env.example
+++ b/.env.example
@@ -80,3 +80,7 @@ ALEXA_RANK_MIN=20000
 PAYTR_MERCHANT_ID=
 PAYTR_MERCHANT_KEY=
 PAYTR_MERCHANT_SALT=
+
+INSTAGRAM_KEY=
+INSTAGRAM_SECRET=
+INSTAGRAM_CALLBACK=http://127.0.0.1/instagram/callback
