--- a/.env.example
+++ b/.env.example
@@ -84,3 +84,4 @@ PAYTR_MERCHANT_SALT=
 INSTAGRAM_KEY=
 INSTAGRAM_SECRET=
 INSTAGRAM_CALLBACK=http://127.0.0.1/instagram/callback
+INSTAGRAM_SESSION_ID=6915996765%3AWzdvm6lbDUbra6%3A28
