--- a/.env.example
+++ b/.env.example
@@ -85,3 +85,7 @@ INSTAGRAM_KEY=
 INSTAGRAM_SECRET=
 INSTAGRAM_CALLBACK=http://127.0.0.1/instagram/callback
 INSTAGRAM_SESSION_ID=6915996765%3AWzdvm6lbDUbra6%3A28
+
+NETGSM_USERCODE=
+NETGSM_PASSWORD=
+NETGSM_MSGHEADER=
