--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME="Olive"
+APP_NAME="VZT"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://olive.veri.zone
+APP_URL=http://vzt.veri.zone
 APP_DOMAIN=veri.zone
 APP_PASSWORD=1234
 
