--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "laravel/tinker": "^1.0",
         "patrickschur/language-detection": "^3.4",
         "predis/predis": "^1.1",
+        "thiagoalessio/tesseract_ocr": "^2.9",
         "torann/geoip": "^1.0"
     },
     "require-dev": {
