veri.zone to 8vz.net

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@ APP_NAME="VZT"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://vzt.veri.zone
-APP_DOMAIN=veri.zone
+APP_URL=http://8vz.net
+APP_DOMAIN=8vz.net
 APP_PASSWORD=1234
 
 REGISTRATION=true
@@ -32,14 +32,14 @@ REDIS_PORT=6379
 
 MAIL_HOST=smtp.yandex.com.tr
 MAIL_PORT=465
-MAIL_USERNAME=noreply@veri.zone
+MAIL_USERNAME=noreply@8vz.net
 MAIL_PASSWORD=
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=noreply@veri.zone
-MAIL_FROM_NAME=veri.zone
+MAIL_FROM_ADDRESS=noreply@8vz.net
+MAIL_FROM_NAME=8vz.net
 
-GROUP_EMAIL=destek@veri.zone
-ROOT_EMAIL=alper@veri.zone
+GROUP_EMAIL=destek@8vz.net
+ROOT_EMAIL=alper@8vz.net
 ORGANISATION_ID_ROOT=15
 USER_ID_SUPPORT=1
 
